--- a/web/src/components/blog-post-preview.module.css
+++ b/web/src/components/blog-post-preview.module.css
@@ -2,11 +2,12 @@
   display: block;
   color: inherit;
   text-decoration: none;
+  grid-column: span 3;
 }
 
 .leadMediaThumb {
   position: relative;
-  padding-bottom: 66.666%;
+  padding-bottom: calc(5 / 4 * 100%);
   background: #eee;
 
   @nest & img {
@@ -20,6 +21,15 @@
 }
 
 .title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.5px;
+  color: #000000;
+  margin-bottom: 3px;
+  margin-top: 15px;
+
   @media (hover: hover) {
     @nest .root:hover & {
       text-decoration: underline;
@@ -27,12 +37,42 @@
   }
 }
 
+.articleDetails {
+  padding: 30px;
+  min-height: 160px;
+}
+
 .excerpt {
   @nest & p {
-    margin: 0.5em 0;
+    margin: 0;
+    font-family: Moderat Trial;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+    color: #000000;
   }
 
   @nest & strong {
     font-weight: 600;
+  }
+}
+
+.categories {
+  list-style: none;
+  padding: 0;
+
+  @nest & li {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 24px;
+    letter-spacing: 1.3125px;
+    text-transform: uppercase;
+    color: #6B6B6B;
+    display: inline;
+  }
+
+  @nest & :not(:last-child)::after {
+    content: ', ';
   }
 }
