--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -1,16 +1,36 @@
 @import '../styles/media-queries.css';
 @import '../styles/vars.css';
 
-.root {}
+.root {
+  /* margin-bottom: 5em; */
+}
+
+.heading {
+  @media (--media-min-small) {
+    grid-column: 3 / 11;
+  }
+}
 
 .title {
   composes: responsiveTitle1 from './typography.module.css';
+  font-weight: normal;
+  font-size: 54px;
+  line-height: 58px;
+  letter-spacing: -0.5px;
+  margin-bottom: 0;
 }
 
 .mainImage {
+  /* grid-column: 1; */
+  padding-bottom: calc(4 / 5 * 100%);
   position: relative;
   background: #eee;
-  padding-bottom: calc(9 / 16 * 100%);
+  margin-bottom: 2rem;
+
+  @media (--media-min-small) {
+    grid-column: 1 / 13;
+    padding-bottom: calc(20 / 47 * 100%);
+  }
 
   @nest & img {
     position: absolute;
@@ -23,17 +43,58 @@
   }
 }
 
+.wrapper {
+  box-sizing: border-box;
+  margin: 0 auto;
+  padding: 1em;
+  display: grid;
+  grid-gap: 1.5rem;
+  align-items: baseline;
+
+  @media (--media-min-small) {
+    max-width: 1176px;
+    grid-template-columns: repeat(12, 1fr);
+    padding: 0;
+  }
+}
+
 .grid {
   display: grid;
   grid-template-columns: 1fr;
   grid-column-gap: 2em;
 
+  @media (--media-min-small) {
+    grid-column: 1/13;
+    margin-top: 2rem;
+  }
+
   @media (--media-min-medium) {
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 1.5rem;
+  }
+}
+
+.excerpt {
+  @media (--media-min-small) {
+    grid-column: 3 / 11;
+  }
+  
+  @nest & p {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.5px;
+    margin-top: 0;
   }
 }
 
 .mainContent {
+  @nest & p {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+  }
+
   @nest & a {
     color: var(--color-accent);
 
@@ -43,32 +104,90 @@
       }
     }
   }
+
+  @media (--media-min-small) {
+    grid-column: 4 / 10;
+  }
 }
 
 .metaContent {
+  grid-row: 1;
+
+  @media (--media-max-small) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: baseline;
+    margin-bottom: 2rem;
+  }
+
+  @media (--media-min-small) {
+    grid-column: 1/3;
+    grid-row: 1 / auto;
+    text-align: right; 
+  }
 }
 
 .publishedAt {
-  composes: small from './typography.module.css';
-  margin: 1.5rem 0 3rem;
+  /* composes: small from './typography.module.css'; */
+  @nest & span {
+    margin: 1.5rem 0 3rem;
+    padding: 2px 0;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 1.3125px;
+    text-transform: uppercase;
+    color: #6B6B6B;
+  }
+
+  @nest & h3 {
+    margin: 0.5rem 0 0;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 28px;
+  }
+
+  @media (--media-min-small) {
+    margin-top: 30px;
+  }
 }
 
 .categories {
-  border-top: 1px solid var(--color-black);
-  margin: 2rem 0 3rem;
+  /* border-top: 1px solid var(--color-black); */
+  /* margin: 2rem 0 3rem; */
+  line-height: 24px;
 
   @nest & ul {
     list-style: none;
-    margin: 0.75rem 0;
+    margin: 2px 0;
     padding: 0;
   }
 
   @nest & ul li {
-    padding: 0.25rem 0;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 1.3125px;
+    text-transform: uppercase;
+    color: #6B6B6B;
+    padding: 2px 0;
   }
 }
 
 .categoriesHeadline {
-  composes: base from './typography.module.css';
+  /* composes: base from './typography.module.css'; */
   margin: 0.5rem 0 0;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.relatedPosts {
+  @media (--media-min-small) {
+    grid-column: 4 / span 5;    
+  }
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 44px;
+  letter-spacing: -0.5px;
 }
