--- a/web/src/components/container.module.css
+++ b/web/src/components/container.module.css
@@ -1,12 +1,20 @@
 @import '../styles/media-queries.css';
 
 .root {
-  box-sizing: border-box;
+  
+  /* box-sizing: border-box;
   max-width: 960px;
   padding: 1.5em;
-  margin: 0 auto;
+  margin: 0 auto;  */
+ 
+
+  /* height: 100%;
+  display: grid;
+  grid-template-columns: 1fr repeat(12, minmax(auto, 4.2rem)) 1fr;
+  grid-template-rows: 7.8rem 20rem 5rem;
+  grid-gap: 0 2rem; */
 
   @media (--media-min-small) {
-    padding: 2em;
+    /* padding: 2em; */
   }
 }
