--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -7,27 +7,45 @@
 }
 
 .wrapper {
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   margin: 0 auto;
-  max-width: 960px;
   padding: 1em;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1.5rem;
+  align-items: baseline; */
+  composes: wrapper from './layout.module.css';
 
   @media (--media-min-small) {
-    padding: 1.5em 1.5em;
+    padding: 3em 0;
+    grid-template-columns: repeat(12, 1fr);
+  }
+
+  @media (--media-min-xlarge) {
+    max-width: 1176px;
   }
 }
 
 .branding {
   font-size: inherit;
   margin: 0;
-  flex: 1;
+  grid-column-start: 1;
+
+  @media (--media-min-small) {
+    grid-column-end: 3;
+  }
 
   @nest & a {
     display: inline-block;
     padding: 0.5em;
+    padding-left: 0;
     color: inherit;
     text-decoration: none;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: -0.5px;
 
     @media (hover: hover) {
       @nest &:hover {
@@ -45,8 +63,11 @@
   margin: 0;
   padding: calc(14 / 17 / 2 * 1rem);
   outline: none;
+  grid-column-start: 2;
+  align-self: center;
+  justify-self: end;
 
-  & svg {
+  @nest & svg {
     display: block;
   }
 
@@ -57,6 +78,8 @@
 
 .nav {
   display: none;
+  grid-column-start: 3;
+  grid-column-end: 13;
 
   @nest & ul {
     margin: 0;
@@ -67,6 +90,13 @@
     display: block;
     color: inherit;
     text-decoration: none;
+
+    font-family: Circular Std Book;
+    font-style: normal;
+    font-weight: 450;
+    font-size: 16px;
+    line-height: 24px;
+    color: #969696;
   }
 
   @media (hover: hover) {
@@ -98,7 +128,19 @@
     @nest & ul {
       list-style: none;
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-start;
+    
+      & li:first-child a {
+        padding-left: 0;
+      }
+
+      /* & li:last-child {
+        margin-left: auto;
+
+        & a {
+          padding-right: 0;
+        }
+      } */
     }
 
     @nest & ul li a {
