--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -1,7 +1,7 @@
 @import './vars.css';
 
 html {
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: DM Sans, -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: var(--font-base-size);
   line-height: var(--font-base-line-height);
 }
@@ -13,6 +13,6 @@ body {
   margin: 0;
 }
 
-html, body, body > div, body > div > div {
+html, body {
   height: 100%;
 }
