--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -14,10 +14,17 @@
 .title {
   composes: responsiveTitle1 from './typography.module.css';
   font-weight: normal;
-  font-size: 54px;
-  line-height: 58px;
+  font-size: 24px;
+  line-height: 1.6;
+  font-weight: 500;
   letter-spacing: -0.5px;
   margin-bottom: 0;
+
+  @media (--media-min-small) {
+    font-size: 54px;
+    line-height: 58px;
+    font-weight: 400;
+  }
 }
 
 .mainImage {
@@ -44,17 +51,25 @@
 }
 
 .wrapper {
-  box-sizing: border-box;
-  margin: 0 auto;
-  padding: 1em;
-  display: grid;
-  grid-gap: 1.5rem;
-  align-items: baseline;
+  padding: 0;
+  composes: wrapper from './layout.module.css';
 
   @media (--media-min-small) {
     max-width: 1176px;
     grid-template-columns: repeat(12, 1fr);
     padding: 0;
+  }
+
+  @media (--media-max-small) {
+    grid-gap: 0.5rem;
+  }
+}
+
+@media (--media-max-small) {
+  .heading,
+  .excerpt,
+  .grid {
+    padding: 0 2rem;
   }
 }
 
@@ -79,16 +94,37 @@
     grid-column: 3 / 11;
   }
   
-  @nest & p {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 32px;
+  @nest & h3 {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.6;
     letter-spacing: -0.5px;
     margin-top: 0;
+
+    @media (--media-min-small) {
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 500;
+    }
   }
 }
 
 .mainContent {
+  @nest & p:first-child:first-letter {
+    float: left;
+    font-family: Georgia;
+    font-size: 100px;
+    line-height: 60px;
+    padding-top: 10px;
+    padding-right: 8px;
+    padding-left: 3px;
+
+    @media (--media-max-small) {
+      font-size: 60px;
+      line-height: 35px;
+    }
+  }
+
   @nest & p {
     font-weight: 300;
     font-size: 16px;
@@ -133,18 +169,28 @@
     margin: 1.5rem 0 3rem;
     padding: 2px 0;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 12px;
+    line-height: 1.6;
     letter-spacing: 1.3125px;
     text-transform: uppercase;
     color: #6B6B6B;
+
+    @media (--media-min-small) {
+      font-size: 14px;
+      line-height: 24px;
+    }
   }
 
-  @nest & h3 {
+  @nest & p {
     margin: 0.5rem 0 0;
     font-weight: 300;
-    font-size: 16px;
-    line-height: 28px;
+    font-size: 12px;
+    line-height: 1.6;
+
+    @media (--media-min-small) {
+      font-size: 16px;
+      line-height: 28px;
+    }
   }
 
   @media (--media-min-small) {
@@ -165,12 +211,17 @@
 
   @nest & ul li {
     font-weight: 500;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 11px;
+    line-height: 1.6;
     letter-spacing: 1.3125px;
     text-transform: uppercase;
     color: #6B6B6B;
     padding: 2px 0;
+
+    @media (--media-min-small) {
+      font-size: 14px;
+      line-height: 24px;
+    }
   }
 }
 
@@ -178,8 +229,13 @@
   /* composes: base from './typography.module.css'; */
   margin: 0.5rem 0 0;
   font-weight: 300;
-  font-size: 16px;
-  line-height: 28px;
+  font-size: 11px;
+  line-height: 1.6;
+
+  @media (--media-min-small) {
+    font-size: 16px;
+    line-height: 28px;
+  }
 }
 
 .relatedPosts {
@@ -187,7 +243,13 @@
     grid-column: 4 / span 5;    
   }
   font-weight: normal;
-  font-size: 32px;
-  line-height: 44px;
+  font-size: 24px;
+  line-height: 1.6;
   letter-spacing: -0.5px;
+  margin-bottom: 10px;
+
+  @media (--media-min-small) {
+    font-size: 32px;
+    line-height: 44px;
+  }
 }
