--- a/web/src/components/cta.module.css
+++ b/web/src/components/cta.module.css
@@ -1,62 +1,43 @@
 @import '../styles/media-queries.css';
 
 .root {
-  background-color: #F9F9F9;
+  background: -webkit-linear-gradient(90deg, #ffffff 50%, #F9F9F9 50%);
 }
 
 .wrapper {
-  box-sizing: border-box;
-  margin: 0 auto;
-  display: grid;
-  /* grid-template-rows: [row1-start] 25% [row1-end] 100px [third-line] auto [last-line]; */
-  grid-gap: 1.5rem;
   margin-bottom: 100px;
+  padding: 0;
 
-  @media (--media-min-small) {
-    max-width: 1176px;
-    padding: 0;
-    grid-template-columns: repeat(12, 1fr);
-    margin-bottom: 250px;
+  composes: wrapper from './layout.module.css';
 
-    @nest & .subgrid {
-      display: grid;
-      grid-column-start: 2;
-      grid-column-end: 12;
-      grid-template-rows: 50%
-    }
+  @media (--media-max-small) {
+    padding: 0 2rem;
   }
 
   @nest & .box {
     background-color: #ffffff;
     padding: 50px 60px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    grid-row-start: 2;
 
     @media (--media-min-small) {
       padding: 80px 100px;
+      grid-column-start: 2;
+      grid-column-end: 12;
     }
   }
 
   @nest & h4 {
-    font-family: Moderat Trial;
     font-style: normal;
     font-weight: 300;
-    font-size: 32px;
-    line-height: 44px;
-    /* or 137% */
+    font-size: 16px;
+    line-height: 1.6;
     letter-spacing: -0.5px;
     margin: 0;
     margin-bottom: 15px;
-  }
 
-  @nest & a {
-    margin-top: 15px;
-    font-family: Moderat Trial;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
-    color: #000000;
-    text-decoration: none;
+    @media (--media-min-small) {
+      font-size: 32px;
+      line-height: 44px;
+    }
   }
 }
