--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -15,15 +15,6 @@
   grid-gap: 1.5rem;
   align-items: baseline; */
   composes: wrapper from './layout.module.css';
-
-  @media (--media-min-small) {
-    padding: 3em 0;
-    grid-template-columns: repeat(12, 1fr);
-  }
-
-  @media (--media-min-xlarge) {
-    max-width: 1176px;
-  }
 }
 
 .branding {
@@ -31,7 +22,7 @@
   margin: 0;
   grid-column-start: 1;
 
-  @media (--media-min-small) {
+  @media (--media-min-xlarge) {
     grid-column-end: 3;
   }
 
@@ -42,15 +33,12 @@
     color: inherit;
     text-decoration: none;
     font-weight: 500;
-    font-size: 24px;
-    line-height: 24px;
     text-align: center;
     letter-spacing: -0.5px;
 
-    @media (hover: hover) {
-      @nest &:hover {
-        text-decoration: underline;
-      }
+    @media (--media-min-small) {
+      font-size: 24px;
+      line-height: 24px;
     }
   }
 }
@@ -78,8 +66,6 @@
 
 .nav {
   display: none;
-  grid-column-start: 3;
-  grid-column-end: 13;
 
   @nest & ul {
     margin: 0;
@@ -90,8 +76,6 @@
     display: block;
     color: inherit;
     text-decoration: none;
-
-    font-family: Circular Std Book;
     font-style: normal;
     font-weight: 450;
     font-size: 16px;
@@ -101,24 +85,34 @@
 
   @media (hover: hover) {
     @nest & ul li a:hover {
-      text-decoration: underline;
+      color: #555555;
     }
+  }
+
+  @media (--media-min-xlarge) {
+    grid-column-start: 3;
+    grid-column-end: 13;
   }
 
   @media (--media-max-small) {
     position: absolute;
     background: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
     left: 0;
     right: 0;
     top: 4rem;
+    height: 60vh;
 
     @nest & ul {
       padding: 1rem 0;
     }
 
     @nest & ul li a {
-      padding: 0.5rem 1.5rem;
+      padding: 0.5rem 2rem;
+      font-size: 32px;
+      line-height: 44px;
+      letter-spacing: -0.5px;
+      color: #000000;
     }
   }
 
