--- a/web/src/styles/pages/about.module.css
+++ b/web/src/styles/pages/about.module.css
@@ -11,15 +11,18 @@
     padding-top: 10px;
     padding-right: 8px;
     padding-left: 3px;
+
+    @media (--media-max-small) {
+      font-size: 60px;
+      line-height: 35px;
+    }
   }
 }
 
 .wrapper {
-  box-sizing: border-box;
-  margin: 0 auto;
-  padding: 1em;
-  display: grid;
-  grid-gap: 1.5rem;
+  padding: 0;
+
+  composes: wrapper from '../../components/layout.module.css';
   
   @media (--media-min-small) {
     max-width: 1176px;
@@ -53,6 +56,10 @@
 .mainContent {
   @media (--media-min-small) {
     grid-column: 4 / 10;
+  }
+
+  @media (--media-max-small) {
+    padding: 0 2rem;
   }
 
   @nest & p {
