--- a/web/src/components/layout.module.css
+++ b/web/src/components/layout.module.css
@@ -89,7 +89,8 @@
       grid-column: 1 / 3;
     }
 
-    & a {
+    & .socialMediaLink {
+      text-transform: capitalize;
       font-weight: 400;
       font-size: 16px;
       line-height: 24px;
