--- a/web/src/components/role-list.module.css
+++ b/web/src/components/role-list.module.css
@@ -51,12 +51,15 @@
   @nest & p {
     margin: 5px 0 0 0;
     font-weight: 300;
-    font-size: 12px!important;
-    line-height: 1.6!important;
+
+    @media (--media-max-small) {
+      font-size: 12px!important;
+      line-height: 1.6!important; 
+    }
 
     @media (--media-min-small) {
-      font-size: 16px;
-      line-height: 28px;
+      font-size: 16px!important;
+      line-height: 28px!important;
     }
   }
 
